--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.17.0",
     "node-cron": "^4.2.1",
+    "socket.io": "^4.8.1",
     "stripe": "^18.3.0"
   }
 }
